--- a/userscript/package.json
+++ b/userscript/package.json
@@ -3,14 +3,24 @@
     "version": "1.4.0",
     "private": true,
     "dependencies": {
+        "@types/esprima": "^4.0.3",
+        "@types/react": "^17.0.21",
+        "@types/react-bootstrap-range-slider": "^1.2.1",
+        "@types/react-bootstrap-typeahead": "^5.1.7",
+        "@types/react-dom": "^17.0.9",
         "bootstrap": "^4.6.0",
+        "easy-peasy": "^5.0.3",
+        "esprima": "^4.0.1",
         "file-saver": "^2.0.5",
         "react": "^17.0.2",
         "react-app-rewired": "^2.1.8",
         "react-bootstrap": "^1.6.3",
+        "react-bootstrap-range-slider": "^3.0.2",
+        "react-bootstrap-typeahead": "^5.2.0",
         "react-dom": "^17.0.2",
-        "react-scripts": "^3.4.4",
-        "route-parser": "0.0.5"
+        "react-scripts": "^4.0.3",
+        "route-parser": "0.0.5",
+        "typescript": "^4.4.3"
     },
     "scripts": {
         "start": "npm run build-styles && PORT=8124 react-app-rewired start",
