--- a/userscript/package.json
+++ b/userscript/package.json
@@ -12,24 +12,23 @@
         "easy-peasy": "^5.0.3",
         "esprima": "^4.0.1",
         "file-saver": "^2.0.5",
+        "npm-run-all": "^4.1.5",
         "react": "^17.0.2",
-        "react-app-rewired": "^2.1.8",
         "react-bootstrap": "^1.6.3",
         "react-bootstrap-range-slider": "^3.0.2",
         "react-bootstrap-typeahead": "^5.2.0",
         "react-dom": "^17.0.2",
-        "react-scripts": "^4.0.3",
         "route-parser": "0.0.5",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.3",
+        "vite": "^5.4.2"
     },
     "scripts": {
-        "start": "npm run build-styles && PORT=8124 react-app-rewired start",
+        "start": "npm-run-all --parallel build:watch preview",
+        "preview": "vite preview",
+        "build:watch": "vite build --watch",
+        "build": "npm run build-styles && vite build",
         "finalize": "mkdir -p ../dist && cp src/userscript-header.js ../dist/react-userscripts.user.js && cat build/static/js/main.js >> ../dist/react-userscripts.user.js",
-        "build": "npm run build-styles && react-app-rewired build && npm run finalize",
-        "debug-build": "react-app-rewired --inspect-brk=5858 build && npm run finalize",
-        "build-styles": "lessc src/namespaced-bootstrap.less src/namespaced-bootstrap.css",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "build-styles": "lessc src/namespaced-bootstrap.less src/namespaced-bootstrap.css"
     },
     "eslintConfig": {
         "extends": "react-app"
