--- a/userscript/package.json
+++ b/userscript/package.json
@@ -3,6 +3,7 @@
     "version": "1.5.0",
     "private": true,
     "dependencies": {
+        "@daypilot/daypilot-lite-react": "^3.25.0",
         "@types/esprima": "^4.0.6",
         "@types/react": "^18.3.4",
         "@types/react-dom": "^18.3.0",
